--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "next": "11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.8.8",
+    "react-is": "^17.0.2",
+    "styled-breakpoints": "^10.0.1",
+    "styled-components": "^5.3.0",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@types/styled-components": "^5.1.10",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
+    "prettier": "^2.3.1",
     "typescript": "4.3.3"
   }
 }
