--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.7.0",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -16,7 +17,8 @@
     "react-is": "^17.0.2",
     "styled-breakpoints": "^10.0.1",
     "styled-components": "^5.3.0",
-    "styled-reset": "^4.3.4"
+    "styled-reset": "^4.3.4",
+    "three": "^0.129.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
